--- a/styles.css
+++ b/styles.css
@@ -273,3 +273,22 @@ main {
 .hidden {
     display: none !important;
 }
+
+
+/* Add this to your existing CSS */
+.message-link {
+    margin-top: 8px;
+}
+
+.message-link a {
+    color: #2a419d;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 0;
+}
+
+.message-link a:hover {
+    text-decoration: underline;
+}
+
